# TicTacToeBot

./: CMakeLists.txt  aiLogic.cpp  aiLogic.h  board.cpp  board.h  dataManager.cpp  dataManager.h  doctest.h  gameStates.cpp  gameStates.h  main.cpp  node.cpp  node.h  player.cpp  player.h  turnOutcome.cpp  turnOutcome.h
